--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style>
+	*{
+	margin:0;
+	padding: 0;
+	}
+	h1{
+		color:red;
+	}
+	</style>
 </head>
 <body>
 	<h1>nihao</h1>
